src/test/ui/nll/issue-51512.stderr
error[E0382]: use of moved value: `range`
  --> $DIR/issue-51512.rs:4:13
   |
LL |     let range = 0..1;
   |         ----- move occurs because `range` has type `std::ops::Range<i32>`, which does not implement the `Copy` trait
LL |     let r = range;
   |             ----- value moved here
LL |     let x = range.start;
   |             ^^^^^^^^^^^ value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
